--- a/contents/docs/getting-started/components/code-block/index.mdx
+++ b/contents/docs/getting-started/components/code-block/index.mdx
@@ -3,7 +3,7 @@ title: Code Block
 description: This section previews the Code Block features in markdown.
 ---
 
-The Code Block in this documentation allows you to display code snippets with optional line numbering and line highlighting.
+The Code Block in this documentation allows you to display code snippets with optional line numbering and line highlighting
 
 ## Preview
 
