--- a/contents/docs/getting-started/authentication/index.mdx
+++ b/contents/docs/getting-started/authentication/index.mdx
@@ -65,7 +65,7 @@ Forbidden: Missing API token
   <TabsContent value="HTTP">
     ```http showLineNumbers {1}
     GET /api/hi HTTP/1.1
-    Host: socket.withloveforapi.com
+    Host: traffic.withloveforapi.com
     X-Team-Key: <token-team>
     Authorization: Bearer <token>
     ```
