--- a/contents/docs/getting-started/authentication/index.mdx
+++ b/contents/docs/getting-started/authentication/index.mdx
@@ -3,6 +3,10 @@ title: 🔑 Аутентификация
 description: В этом разделе вы найдете полную информацию о том, как авторизовать ваш запрос.
 ---
 
+<Note type="danger" title="Danger">
+  Этот раздел служит примером авторизации запросов в боте вашей команды. Его использование не обязательно — он представлен исключительно в ознакомительных целях.
+</Note>
+
 ## 📌 Пример запроса
 <BlueCode>GET</BlueCode> ``/api/hi``
 
