--- a/contents/docs/getting-started/help-center/mailers-list/index.mdx
+++ b/contents/docs/getting-started/help-center/mailers-list/index.mdx
@@ -13,3 +13,5 @@ title: ✉️ Список майлеров
 | GOSU Mail                     | 2                                               |
 | Trust Mailer                  | 3                                               |
 | Sonic Mail                    | 4                                               |
+| MEOW Mailer                   | 5                                               |
+| GRIZZLY Mail                  | 6                                               |
