--- a/contents/docs/getting-started/introduction/index.mdx
+++ b/contents/docs/getting-started/introduction/index.mdx
@@ -15,7 +15,11 @@ title: 👋 Введение
 ```http
 https://traffic.withloveforapi.com
 ```
+<Note title="Предупреждение о блокировки">
+Отправляйте каждый новый запрос с интервалом не менее 1 секунды, чтобы избежать блокировки вашего IP системой защиты.
 
+Если ваш IP был заблокирован, [свяжитесь с поддержкой](https://t.me/apexhelper), и мы всё проверим.
+</Note>
 - Рекомендуется регулярно проверять документацию хотя бы раз в месяц, чтобы быть в курсе актуальных изменений.
 - Мы гарантируем, что уже разработанное API останется неизменным, чтобы не повлиять на работу ваших скриптов.
 
