--- a/contents/docs/getting-started/help-center/service-list/index.mdx
+++ b/contents/docs/getting-started/help-center/service-list/index.mdx
@@ -6,6 +6,12 @@ title: 📦 Список сервисов
   Если нужного сервиса нет в списке, но в боте присутствуют страна и сервис, значит, мы ещё не успели обновить документацию. В этом случае вы можете сформировать паттерн в формате \{service\}\_\{country\}, например: packeta_hu.
 </Note>
 
+<Note type="error" title="Кастомные сервисы (2.0/Verif)">
+  **Пожалуйста, временно воздержитесь от создания кастомных сервисов.**  
+    
+  На текущем методе для них может не хватать данных, необходимых для корректного отображения таких элементов, как логотип, favicon и другие. Мы работаем над расширением функциональности, чтобы обеспечить полноценную поддержку кастомных сервисов в будущем.
+</Note>
+
 | **Страна**    | **Сервис**        | **Паттерн**                                     |
 |---------------|-------------------|-------------------------------------------------|
 | **Венгрия**   | Vinted            | vinted_hu                                       |
@@ -32,3 +38,21 @@ title: 📦 Список сервисов
 |               | Gumtree Verif     | gumtreeverif_au                                 |
 |               | AusPost           | auspost_au                                      |
 |               | Pack&Send         | packsend_au                                     |
+|               |                   |                                                 |
+| **Канада**    | Interac           | interac_ca                                      |
+|               |                   |                                                 |
+| **Англия**    | Vinted            | vinted_gb                                       |
+|               | Facebook          | facebook_gb                                     |
+|               | DHL               | dhl_gb                                          |
+|               | RoyalMail         | royalmail_gb                                    |
+|               | Gumtree           | gumtree_gb                                      |
+|               | Nextdoor          | nextdoor_gb                                     |
+|               | Depop             | depop_gb                                        |
+|               | Pack&Send         | packsend_gb                                     |
+|               |                   |                                                 |
+| **Новая Зеландия** | TradeMe      | trademe_nz                                      |
+|               | Facebook          | gumtree_au                                      |
+|               | NzPost            | nzpost_nz                                       |
+|               |                   |                                                 |
+| **Custom**    | Custom (2.0)      | custom (2.0)_cu                                 |
+|               | Custom (Verification) | custom (verification)_cu                    |
