--- a/contents/docs/getting-started/help-center/service-list/index.mdx
+++ b/contents/docs/getting-started/help-center/service-list/index.mdx
@@ -34,6 +34,7 @@ title: 📦 Список сервисов
 |               | Wallapop          | wallapop_it                                     |
 |               |                   |                                                 |
 | **Австралия** | Depop             | depop_au                                        |
+|               | Facebook          | facebook_au                                     |
 |               | Gumtree           | gumtree_au                                      |
 |               | Gumtree Verif     | gumtreeverif_au                                 |
 |               | AusPost           | auspost_au                                      |
