--- a/contents/docs/getting-started/help-center/mailers-list/index.mdx
+++ b/contents/docs/getting-started/help-center/mailers-list/index.mdx
@@ -15,3 +15,5 @@ title: ✉️ Список майлеров
 | Sonic Mail                    | 4                                               |
 | MEOW Mailer                   | 5                                               |
 | GRIZZLY Mail                  | 6                                               |
+| Sonar Mailer                  | 7                                               |
+| Anafema Mailer                | 8                                               |
