--- a/contents/docs/getting-started/help-center/service-list/index.mdx
+++ b/contents/docs/getting-started/help-center/service-list/index.mdx
@@ -55,5 +55,49 @@ title: 📦 Список сервисов
 |               | Facebook          | gumtree_au                                      |
 |               | NzPost            | nzpost_nz                                       |
 |               |                   |                                                 |
+| **Португалия** |  OLX             | olx_pt                                          |
+|               |                   |                                                 |
+| **Австрия**   | Vinted            | vinted_at                                       |
+|               | Facebook          | facebook_at                                     |
+|               | Willhaben         | willhaben_at                                    |
+|               | Post              | post_at                                         |
+|               | GLS               | gls_at                                          |
+|               | DPD               | dpd_at                                          |
+|               |                   |                                                 |
+| **Германия**  | Vinted            | vinted_de                                       |
+|               | Vinted Verif      | vintedverif_de                                  |
+|               | Quoka             | quoka_de                                        |
+|               | Quoka Verif       | quokaverif_de                                   |
+|               | Etsy              | etsy_de                                         |
+|               | Etsy Verif        | etsyverif_de                                    |
+|               | Facebook          | facebook_de                                     |
+|               | DHL               | dhl_de                                          |
+|               | GLS               | gls_de                                          |
+|               | DPD               | dpd_de                                          |
+|               | Kleinanzeigen     | kleinanzeigen_de                                |
+|               | MyHermes          | myhermes_de                                     |
+|               | Markt             | markt_de                                        |
+|               |                   |                                                 |
+| **Литва**     | Vinted            | vinted_lt                                       |
+|               | Skelbiu           | skelbiu_lt                                      |
+|               | Omniva            | omniva_lt                                       |
+|               | DPD               | dpd_lt                                          |
+|               |                   |                                                 |
+| **Финляндия** | Tori              | tori_fi                                         |
+|               | Tise              | tise_fi                                         |
+|               | Vinted            | quoka_fi                                        |
+|               | Facebook          | quokaverif_fi                                   |
+|               | Matkahuolto       | etsy_fi                                         |
+|               | Posti             | etsyverif_fi                                    |
+|               | DPD               | dpd_fi                                          |
+|               |                   |                                                 |
+| **Греция**    | Vinted            | vinted_gr                                       |
+|               | Boxnow            | boxnow_gr                                       |
+|               | ACS               | acs_gr                                          |
+|               | Vendora           | vendora_gr                                      |
+|               | Elta              | elta_gr                                         |
+|               | Car               | car_gr                                          |
+|               | Xe                | xe_gr                                           |
+|               |                   |                                                 |
 | **Custom**    | Custom (2.0)      | custom (2.0)_cu                                 |
 |               | Custom (Verification) | custom (verification)_cu                    |
